# community-detection

./: CMakeLists.txt  README.md
data/: dolphin.graphml  karate.graphml
src/: graf.cpp  graf.h  main.cpp
